--- a/Kib/Kibshop/templates/index.html
+++ b/Kib/Kibshop/templates/index.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+<div class="container mb-5">
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-8 col-sm-12 offset-md-1 p-4 text-center">
+            <h1>Online Delivery Service</h1>
+        </div>
+    </div>
+    <div class="row justify-content-center mt-1">
+        <div class="card col-md-5 col-sm-12 offset-md-1 p-4 text-center">
+            <h2>View Products!</h2>
+            <a href="{% url 'store' %}" class="btn btn-outline-green "><b>Order Now!<b></a>
+        </div>
+    </div>
+</div>
+{% endblock content %}
